find_package(Boost CONFIG COMPONENTS unit_test_framework REQUIRED)

function(def_test PREFIX SOURCE)
  list(GET SOURCE 0 NAME)
  get_filename_component(NAME ${NAME} NAME_WE)
  string(CONCAT NAME ${PREFIX} "_" ${NAME})
  string(MAKE_C_IDENTIFIER ${NAME} NAME)

  add_executable(${NAME} ${SOURCE})
  target_link_libraries(${NAME} PRIVATE Boost::unit_test_framework)
  target_compile_definitions(${NAME} PRIVATE BOOST_UNORDERED_FOA_TESTS)
  target_include_directories(${NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)

  add_test(NAME ${NAME} COMMAND ${NAME})
endfunction()

def_test(foa unordered/fwd_set_test.cpp)
def_test(foa unordered/fwd_map_test.cpp)
def_test(foa unordered/compile_set.cpp)
def_test(foa unordered/compile_map.cpp)
def_test(foa unordered/noexcept_tests.cpp)
def_test(foa unordered/incomplete_test.cpp)
def_test(foa unordered/simple_tests.cpp)
def_test(foa unordered/equivalent_keys_tests.cpp)
def_test(foa unordered/constructor_tests.cpp)
def_test(foa unordered/copy_tests.cpp)
def_test(foa unordered/move_tests.cpp)
def_test(foa unordered/post_move_tests.cpp)
def_test(foa unordered/assign_tests.cpp)
def_test(foa unordered/insert_tests.cpp)
def_test(foa unordered/insert_hint_tests.cpp)
def_test(foa unordered/emplace_tests.cpp)
def_test(foa unordered/erase_tests.cpp)
def_test(foa unordered/merge_tests.cpp)
def_test(foa unordered/find_tests.cpp)
def_test(foa unordered/at_tests.cpp)
def_test(foa unordered/load_factor_tests.cpp)
def_test(foa unordered/rehash_tests.cpp)
def_test(foa unordered/equality_tests.cpp)
def_test(foa unordered/swap_tests.cpp)
def_test(foa unordered/transparent_tests.cpp)
def_test(foa unordered/reserve_tests.cpp)
def_test(foa unordered/contains_tests.cpp)
def_test(foa unordered/erase_if.cpp)
def_test(foa unordered/scary_tests.cpp)
def_test(foa unordered/init_type_insert_tests.cpp)
def_test(foa unordered/max_load_tests.cpp)
def_test(foa unordered/extract_tests.cpp)
def_test(foa unordered/node_handle_tests.cpp)
def_test(foa unordered/uses_allocator.cpp)
def_test(foa "unordered/link_test_1.cpp;unordered/link_test_2.cpp")
def_test(foa unordered/scoped_allocator.cpp)
def_test(foa unordered/hash_is_avalanching_test.cpp)
def_test(foa exception/constructor_exception_tests.cpp)
def_test(foa exception/copy_exception_tests.cpp)
def_test(foa exception/assign_exception_tests.cpp)
def_test(foa exception/move_assign_exception_tests.cpp)
def_test(foa exception/insert_exception_tests.cpp)
def_test(foa exception/erase_exception_tests.cpp)
def_test(foa exception/rehash_exception_tests.cpp)
def_test(foa exception/swap_exception_tests.cpp)
def_test(foa exception/merge_exception_tests.cpp)
def_test(cfoa cfoa/insert_tests.cpp)
def_test(cfoa cfoa/erase_tests.cpp)
def_test(cfoa cfoa/try_emplace_tests.cpp)
def_test(cfoa cfoa/emplace_tests.cpp)
def_test(cfoa cfoa/visit_tests.cpp)
def_test(cfoa cfoa/constructor_tests.cpp)
def_test(cfoa cfoa/clear_tests.cpp)
def_test(cfoa cfoa/swap_tests.cpp)
def_test(cfoa cfoa/merge_tests.cpp)
def_test(cfoa cfoa/rehash_tests.cpp)
def_test(cfoa cfoa/equality_tests.cpp)
def_test(cfoa cfoa/fwd_tests.cpp)
def_test(cfoa cfoa/exception_insert_tests.cpp)
def_test(cfoa cfoa/exception_erase_tests.cpp)
def_test(cfoa cfoa/exception_constructor_tests.cpp)
def_test(cfoa cfoa/exception_assign_tests.cpp)
def_test(cfoa cfoa/exception_merge_tests.cpp)
def_test(cfoa cfoa/rw_spinlock_test.cpp)
def_test(cfoa cfoa/rw_spinlock_test2.cpp)
def_test(cfoa cfoa/rw_spinlock_test3.cpp)
def_test(cfoa cfoa/rw_spinlock_test4.cpp)
def_test(cfoa cfoa/rw_spinlock_test5.cpp)
def_test(cfoa cfoa/rw_spinlock_test6.cpp)
def_test(cfoa cfoa/rw_spinlock_test7.cpp)
def_test(cfoa cfoa/rw_spinlock_test8.cpp)
